# MovieDatabase

./: AdminWidget.cpp  AdminWidget.h  CMakeLists.txt  CSVWatchList.cpp  CSVWatchList.csv  CSVWatchList.h  Command.h  Exceptions.cpp  Exceptions.h  FileRepository.cpp  FileRepository.h  FileWatchList.cpp  FileWatchList.h  HTMLWatchList.h  Movie.cpp  Movie.h  MovieValidator.cpp  MovieValidator.h  MovieWatchListModel.h  README.md  Repository.cpp  Repository.h  Service.cpp  Service.h  UI.h  Utils.cpp  Utils.h  WatchList.cpp  WatchList.h  WatchListFile+CSV.csv  main.cpp  mainwindow.cpp  mainwindow.h  movies.txt
